test_programs/compile_failure/noirc_frontend_tests_unconstrained_type_parameter_in_impl/src/main.nr

        pub struct Foo<T> {}

        impl<T, U> Foo<T> {}

        fn main() {
            let _ = Foo {};
        }
        